# FastNViewTriangulation

./: CMakeLists.txt  README.md
cmake/: NViewsTrianConfig.cmake.in  NViewsTrianConfigVersion.cmake.in  setup_installation.cmake
examples/: CMakeLists.txt  example_base.cpp
include/: NViewsCertifier.h  NViewsClass.h  NViewsTypes.h  NViewsUtils.h
src/: NViewsCertifier.cpp  NViewsClass.cpp  NViewsUtils.cpp
tests/: CMakeLists.txt  basic_params.txt  experimentsHelper.cpp  experimentsHelper.h  generic_test.cpp
utils/: ceresSolver.cpp  ceresSolver.h  generatePointCloud.cpp  generatePointCloud.h
